# DifaeAi

./: .env  .env.example  .firebaserc  .gitignore  .replit  BRIDGE_SETUP.md  CAMERA_BRIDGE_SUMMARY.md  QUICK_START_BRIDGE.md  README-camera-bridge.md  README.md  apphosting.yaml  codex_test_vscode.txt  dev-log.txt  firebase.json  firestore.rules  index.html  next.config.js  next.config.mjs  package-lock.json  package.json  replit.md  server.ts  storage.rules  tailwind.config.js  tailwind.config.ts  tsconfig.base.json  tsconfig.json  tsconfig.server.json  turbo.json
attached_assets/: Pasted-About-DIFAE-AI-DIFAE-AI-is-the-world-s-first-Smart-Surveillance-Agent-that-merges-artificial-intell-1762790010516_1762790010517.txt  Pasted-Owner-avatar-DifaeAi-Public-difaeai-DifaeAi-Go-to-file-t-Name-difaeai-difaeai-Merge-pull--1762784485256_1762784485256.txt  Pasted-PS-C-Users-DELL-BRIDGE-ID-bridge-2m256x2rq687-BRIDGE-ID-bridge-2m256x2rq687-The-term-BRIDGE--1762876812240_1762876812241.txt  Pasted-Windows-PowerShell-Copyright-C-Microsoft-Corporation-All-rights-reserved-Install-the-latest--1762882086580_1762882086581.txt
backend/: .eslintrc.cjs  Dockerfile  package-lock.json  package.json  tsconfig.base.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
bridge-agent/: Dockerfile  WINDOWS_SETUP.md  build_windows.bat  requirements.txt  setup.cfg
bridge-agent/bridge_agent/: __init__.py  cloud_agent.py  main.py
bridge-agent/tests/: test_pairing.py
bridge-api/: Dockerfile  openapi.yaml  package-lock.json  package.json  tsconfig.json
docs/: CAMERA_BRIDGE_USER_GUIDE.md  (+6 more)
(+340 files in other folders)
