[metadata]
name = camera-bridge-agent
version = 0.1.0
description = Local LAN bridge exposing authorized camera streams via secure token pairing.

[options]
packages = find:
install_requires =
    aiohttp>=3.9.5
    pyyaml>=6.0.1
    cryptography>=42.0.8
python_requires = >=3.10
include_package_data = True

[options.entry_points]
console_scripts =
    camera-bridge-agent = bridge_agent.main:main

[options.extras_require]
dev =
    pytest>=8.3.1
    pytest-asyncio>=0.23.6
